# mlit_geospatial_data_challenge_2025

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_STRUCTURE.md  README.md  README_BASELINE.md  README_IMPROVED.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  format.yml
docs/: cicd.md  data_description.md  experiments.md  features.md  geo_features.md  tmp.md  uv_usage.md
experiments/configs/: exp001_baseline.yaml
notebooks/: .gitkeep  colab_baseline_geo.ipynb
notebooks/eda/: analyze_target_encoding.py  analyze_target_encoding_preprocessed.py  analyze_target_encoding_quick.py
scripts/: baseline_catboost.py  baseline_improved.py  baseline_with_geo_features.py
src/: __init__.py
src/data/: __init__.py  preprocess.py
src/features/: __init__.py  geo_features.py
src/models/: __init__.py  train_catboost.py
src/utils/: __init__.py  logger.py  metrics.py
src/visualization/: __init__.py
submissions/: README.md
tests/: test_metrics.py
